# sdl2-vga-terminal

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  Readme.md  appveyor.yml  appveyor_.yml  azure-pipelines-sonarcloud.yml  azure-pipelines.yml  build_wasm.sh  codecov.yml  cppcheck.sh  cpplint.sh  lgtm.yml  sonar-project.properties  vcpkg.json
.github/: config.yml
.github/workflow/: release.yml  sonarcloud.yml
.github/workflows/: ci-linux.yml  ci-mac.yml  ci-windows.yml  ci.yml  release.yml  sonarcloud.yml
azure-pipelines/: analyzer.yml  azure-pipelines.yml  github-mirror.yml  linux.yml  macos.yml  matrix.yml  monolithic.yml  release.yml  variables.yml  vcpkg.yml  win-gcc.yml  windows.yml
azure-pipelines/templates/: ci-cmake-steps.yml  ci-steps.yml  cmake-gen-build-steps.yml  cmake-test-steps.yml  dep-job-vcpkg.yml  dep-steps-vcpkg.yml  dep-vcpkg-steps.yml  matrix-job.yml  sonarcloud-job.yml  sonarcloud-steps.yml  vcpkg-cache-step.yml
azure-pipelines/variables/: build_switches.yml  global.yml  images.yml
sdl2-vga-terminal/: CMakeLists.txt  sdl2-vga-terminal-load-so.c  sdl2-vga-terminal-so.c  sdl2-vga-terminal-so.cpp  sdl2-vga-terminal.cpp  sdl2-vga-terminal.h  version.h.in
sdl2-vga-terminal/examples/: CMakeLists.txt  sdl2-tui-terminal.cpp  sdl2-vga-terminal-load-so.c  sdl2-vga-terminal-so.c  sdl2-vga-terminal.cpp  wasm.cpp
sdl2-vga-terminal/include/: VgaTerminal.hpp  Window.hpp  vga-terminal.h
sdl2-vga-terminal/src/: CMakeLists.txt  TuiTerminal.cpp  TuiTerminal.hpp  VgaTerminal.cpp  VgaTerminal.hpp  Window.cpp  Window.hpp  vga-terminal.c  vga-terminal.cpp  vgafonts.h  vgapalette.h
sdl2-vga-terminal/src/exceptions/: exceptions.hpp
sdl2-vga-terminal/src/tui/: Dialog.hpp  utils.cpp  utils.hpp
sdl2-vga-terminal/test/: CMakeLists.txt  Environment.hpp  Snapshot.hpp  TuiTerminalSnapshotTest.cpp  VgaTerminalSnapshotTest.cpp  VgaTerminalTest.cpp  WindowTest.cpp  snapshotTest.cpp  so-test.cpp  tests.cpp
sdl2-vga-terminal/test/tui/: utilsTest.cpp
sdl2-vga-terminal/test/valgrind/: helgrind.cpp  multithreading.cpp
